<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	
	<!-- Please note that you need SAP JCo Plug-ins in your workspace to get built the VClipse Plug-ins with Maven/Tycho -->
	
	<modelVersion>4.0.0</modelVersion>
	
	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<groupId>org.vclipse</groupId>
	<artifactId>org.vclipse.releng</artifactId>
	<version>0.4.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho-version>0.13.0</tycho-version>
		<junit-version>4.8.1</junit-version>
		<eclipse-site>http://download.eclipse.org/releases/${platform-version-name}</eclipse-site>
		<platform-version-name>indigo</platform-version-name>
	</properties>

	<modules>
		<module>../org.vclipse.targetplatform</module>
		<module>../org.vclipse.repository</module>
		
		<!-- JCo Plug-ins -->
		<module>../com.sap.conn.jco</module>
		<module>../com.sap.conn.jco.doc</module>
		<module>../com.sap.conn.jco.idoc</module>
		<module>../com.sap.conn.jco.win32.x86</module>
		<module>../com.sap.conn.jco.win32.x86_64</module>
		
		<!-- VClipse Plug-ins -->
		<module>../org.vclipse.base</module>
		<module>../org.vclipse.base.ui</module>
		<module>../org.vclipse.connection</module>
		<module>../org.vclipse.console</module>
		<module>../org.vclipse.idoc</module>
		<module>../org.vclipse.idoc.tests</module>
		<module>../org.vclipse.idoc.ui</module>
		<module>../org.vclipse.idoc2jcoidoc</module>
		<module>../org.vclipse.jpplib</module>
		<module>../org.vclipse.vcml</module>
		<module>../org.vclipse.vcml.diff</module>
		<module>../org.vclipse.vcml.tests</module>
		<module>../org.vclipse.vcml.ui</module>
		<module>../org.vclipse.vcml.ui.actions</module>
		<module>../org.vclipse.vcml.ui.wizards.imports</module>
		<module>../org.vclipse.vcml2idoc.ui</module>
		<module>../org.vclipse.configscan</module>
		<module>../org.vclipse.configscan.vcmlt</module>
		<module>../org.vclipse.configscan.vcmlt.ui</module>
		
		<!-- VClipse Features -->
		<module>../org.vclipse.idoc_feature</module>
		<module>../org.vclipse.pdr_feature</module>
		<module>../org.vclipse.rfc_feature</module>
		<module>../org.vclipse.vcml_feature</module>
		<module>../org.vclipse.vcml2idoc_feature</module>
		<module>../org.vclipse.configscan_feature</module>
	</modules>

	<build>
		<plugins>
		
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<target>
						<artifact>
							<groupId>org.vclipse</groupId>
							<artifactId>org.vclipse.targetplatform</artifactId>
							<version>0.4.1-SNAPSHOT</version>
							<classifier>VClipse</classifier>
						</artifact>
					</target>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
		
		<pluginManagement>
			<plugins>
				<!-- TYCHO -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>6.0</source>
						<target>6.0</target>
					</configuration>
				</plugin>
				
				<!-- enable source bundle generation -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>maven-osgi-test-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				
				<!-- APACHE MAVEN PLUGINS -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.4.1</version>
					<configuration>
						<encoding>ISO-8859-1</encoding>
					</configuration>
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.3</version>
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.9</version>
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.4.1</version>
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.2-beta-4</version>
				</plugin>
				
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<configuration>
						<preparationGoals>clean -DnewVersion=${releaseVersion} -Dprudent=true
							org.eclipse.tycho:tycho-versions-plugin:set-version
							verify scm:checkin</preparationGoals>
						<arguments>-Prelease</arguments>
					</configuration>
				</plugin>
				
				<!-- OTHER PLUGINS -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.3</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>src-gen</source>
								</sources>
								<sources>
									<source>${project.build.directory}/xtend-gen</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				
				<plugin>
					<groupId>org.eclipse.dash.maven</groupId>
					<artifactId>eclipse-signing-maven-plugin</artifactId>
					<version>1.0.2</version>
				</plugin>
				
				<plugin>
					<groupId>org.fornax.toolsupport</groupId>
					<artifactId>fornax-oaw-m2-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				
			</plugins>
		</pluginManagement>
	</build>

	<pluginRepositories>
	
		<pluginRepository>
			<id>sonatype</id>
			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		
		<!-- Fornax Workflow Runner plugin -->
		<pluginRepository>
			<id>fornax</id>
			<url>http://www.fornax-platform.org/m2/repository</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		
	</pluginRepositories>

	<profiles>
	
		<profile>
			<id>platform-indigo</id>
			<activation>
				<property>
					<name>platform-version-name</name>
					<value>indigo</value>
				</property>
			</activation>
			<properties>
				<eclipse-site>http://download.eclipse.org/releases/indigo</eclipse-site>
				<platform-version>[3.7,3.8)</platform-version>
			</properties>
		</profile>
		
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.tycho</groupId>
						<artifactId>maven-osgi-packaging-plugin</artifactId>
						<configuration>
							<strictVersions>false</strictVersions>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-scm-plugin</artifactId>
						<configuration>
							<basedir>${basedir}</basedir>
							<includes>${basedir}/../feature/feature.xml,${basedir}/../site/site.xml,${basedir}/repository/category.xml</includes>
							<message>[maven-release-plugin] prepare release of OSGI artifacts</message>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<profile>
			<id>skip-ui-tests</id>
			<activation>
				<property>
					<name>skip-ui-tests</name>
				</property>
			</activation>
			<properties>
				<tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest>
			</properties>
		</profile>
		
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
			</properties>
		</profile>
	
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<licenses>
		<license>
			<name>Eclipse Public License v1.0</name>
			<comments>
       All rights reserved.

       This program and the accompanying materials are made
       available under the terms of the Eclipse Public License v1.0
       which accompanies this distribution, and is available at
       http://www.eclipse.org/legal/epl-v10.htm
      </comments>
		</license>
	</licenses>

	<url>http://http://code.google.com/a/eclipselabs.org/p/vclipse/</url>
	<inceptionYear>2011</inceptionYear>
	<issueManagement>
		<system>GoogleCode Issue Tracker</system>
		<url>http://code.google.com/a/eclipselabs.org/p/vclipse/issues/list</url>
	</issueManagement>
	<organization>
		<name>webXcerpt Software GmbH</name>
		<url>http://www.vclipse.org</url>
	</organization>
	<scm>
		<developerConnection>http://code.google.com/a/eclipselabs.org/p/vclipse/people/list</developerConnection>
	</scm>
	<ciManagement>
	</ciManagement>
	<description>VClipse is an Eclipse-based integrated development environment (IDE) for product modeling for 
	the SAP Variant Configurator (VC). VClipse supports the specification of objects and dependencies in a textual 
	domain specific language called VCML. This enables the use of standard text comparison tools and version control 
	systems in the model development process.</description>
</project>
